# p2t

./: .bumpversion.cfg  .clang-format  .gitattributes  .gitignore  .mazoeaqa.yml  .pre-commit-config.yaml  Dev.md  Makefile  Makefile.flags.in  Makefile.rules.in  apt-requirements.txt  configure.in
cmake/: CMakeMaz.cmake  SourceGroups.cmake
scripts/: bumpversion.py  trigger.build.sh
src/format/: Makefile  format.h
src/io-document/: elements.cpp  elements.h  io-document.cpp  io-document.h  statistics.cpp  statistics.h  types.h
src/io-document/json/: json.hpp
src/maz-utils/: coords.cpp  coords.h  fs.cpp  fs.h  params.cpp  params.h  utils.cpp  utils.h
src/os/: compiler.h  posix.h  version.h  win.h
src/tools/: Makefile  pdf_to_png.cc  pdf_to_ppm.cc  pdf_to_text.cc
src/unilib/: text.cpp  text.h  unicode.cpp  unicode.h  uninorms.cpp  uninorms.h  utf8.cpp  utf8.h
src/xpdf/: .gitignore  aconf.h.in  xpdf-aconf2.h
src/xpdf/fofi/: CMakeLists.txt  FoFiTrueType.cc  FoFiType1.cc  FoFiType1C.cc
src/xpdf/goo/: CMakeLists.txt  GString.cc  gfile.h
src/xpdf/splash/: CMakeLists.txt  Splash.cc  SplashBitmap.cc  SplashClip.cc  SplashFTFontEngine.cc  SplashState.cc  SplashXPath.cc  SplashXPathScanner.cc
src/xpdf/xpdf/: Annot.cc  CMakeLists.txt  CMap.cc  CharCodeToUnicode.cc  Decrypt.cc  Dict.cc  Dict.h  Function.cc  Function.h  Gfx.cc  GfxFont.cc  GfxState.cc  GlobalParams.cc  GlobalParams.h  ImageOutputDev.cc  JArithmeticDecoder.cc  JBIG2Stream.cc  JPXStream.cc  Lexer.cc  Link.cc  OptionalContent.cc  OutputDev.h  PDFCore.cc  PDFCore.h  PDFDoc.cc  PSOutputDev.cc  PSOutputDev.h  Page.cc  Parser.cc  Parser.h  SecurityHandler.cc  SplashOutputDev.cc  Stream.cc  TextAccent.cc  TextAccent.h  TextOutputDev.cc  TextOutputDev.h  UnicodeMapAccent.cc  UnicodeMapAccent.h  XPDFCore.cc  (+5 more)
